commit tree e46c301fd76ee49af715af5c5a5eeea7f6c7df41

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "node-fetch": "^2.6.1",
     "sinon": "^7.2.3",
     "sinon-stub-promise": "^4.0.0"
+  },
+  "dependencies": {
+    "glob": "^7.1.7"
   }
 }
